src/Cart/Cart.css
.cart-wrapper {
  background-color: rgba(255, 255, 255, 0.8);
  margin: 20px 20px 20px 20px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;;
}

.cart-header {
  display: flex;
  justify-content: center;
  font-size: 17px;
  font-weight: bolder;
}

.cart-button-container {
  display: flex;
  justify-content: space-evenly;
}

.cart-titles {
  display: flex;
  justify-content: center;
}

.cart-titles-text {
  margin: 0 5px 0 5px;
}

.cart-img-container {
  display: flex;
  justify-content: center;
  border: 1px solid black;
  margin: 10px 2px 10px 2px;
  width: 50px;
  height: 50px;
  align-items: center;
  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
}

.items-top {
  display: flex;
}

.items-bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.cart-items {
  display: flex;
  justify-content: space-evenly;
}

.cart-total {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding: 0 20px 0 20px;
}

.cart-total-text {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.shop-button-style {
  display: flex;
  align-items: center;
  padding: 10px 20px 10px 20px;
  margin: 20px 0 20px 0;
  background-color: white;
  border-radius: 20px;
}

.summary-title {
  font-size: 15px;
  font-weight: bolder;
  padding: 0 170px 0 0;
}

.checkout-button-style {
  display: flex;
  align-items: center;
  padding: 10px 20px 10px 20px;
  margin: 20px 0 20px 0;
  background-color: rgba(255, 135, 92);
  border-radius: 20px;
  color: white;
}

.remove-button {
  display: flex;
  align-items: center;
  padding: 2px 5px 2px 5px;
  margin: 20px 0 20px 0;
  background-color: rgba(255, 135, 92);
  border-radius: 20px;
  color: white;
}

#root {
  background-color: white;
}

